--- a/.prettierrc
+++ b/.prettierrc
@@ -5,6 +5,7 @@
 	"printWidth": 100,
 	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
 	"overrides": [
+		{ "files": "*.yml", "options": { "tabWidth": 2 } },
 		{
 			"files": "*.svelte",
 			"options": {
