--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write .",
-		"test:unit": "vitest",
-		"test": "npm run test:unit -- --run && npm run test:e2e",
-		"test:e2e": "playwright test"
+		"es:fix": "eslint --cache --fix .",
+		"fix": "pnpm fmt:fix && pnpm es:fix",
+    "fmt": "prettier --experimental-cli --check .",
+		"fmt:fix": "prettier --experimental-cli --write .",
+		"lint": "pnpm --parallel /^lint:/",
+		"lint:es": "eslint --cache .",
+		"lint:sv": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"test": "pnpm test:unit -- --run && pnpm test:e2e",
+		"test:e2e": "playwright test",
+		"test:unit": "vitest"
 	},
 	"devDependencies": {
 		"@bastidood/eslint-plugin-imsort": "^0.11.0",
