--- a/.prettierrc
+++ b/.prettierrc
@@ -6,7 +6,7 @@
 	"printWidth": 100,
 	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
 	"overrides": [
-		{ "files": "*.yml", "options": { "tabWidth": 2 } },
+		{ "files": ["*.yml", "*.yaml"], "options": { "tabWidth": 2 } },
 		{
 			"files": "*.svelte",
 			"options": {
