--- a/.prettierrc
+++ b/.prettierrc
@@ -6,9 +6,9 @@
     "printWidth": 100,
     "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
     "overrides": [
-        { "files": ["*.yml", "*.yaml"], "options": { "tabWidth": 2 } },
+        { "files": ["**/*.yml", "**/*.yaml"], "options": { "tabWidth": 2 } },
         {
-            "files": "*.svelte",
+            "files": "**/*.svelte",
             "options": {
                 "parser": "svelte",
                 "svelteAllowShorthand": true
