--- a/.github/workflows/check_stability.yaml
+++ b/.github/workflows/check_stability.yaml
@@ -34,10 +34,10 @@ jobs:
         run: pnpm exec playwright install --with-deps
       - name: Test Codebase
         run: pnpm test
-      - name: Upload Artifacts
+      - name: Upload Test Results
         uses: actions/upload-artifact@v6
         with:
-          name: report
+          name: test-results
           path: test-results/
           retention-days: 90
           include-hidden-files: true
