--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@sveltejs/vite-plugin-svelte": "^6.2.4",
         "@tailwindcss/vite": "^4.1.18",
         "@types/node": "^25.1.0",
+        "@types/pg": "^8.16.0",
         "@vitest/browser-playwright": "^4.0.18",
         "drizzle-kit": "^0.31.8",
         "eslint": "^9.39.2",
